First preview for 3-typed generated manual delivery

--- a/index.html
+++ b/index.html
@@ -32,9 +32,16 @@
 					</header>
 					<div class="features">
 						<div class="feature">
-							<a href="quickstart.html"><i class="fa fa-rocket"></i></a>
+							<a href="manual/quick-start-tutorial.html"><i class="fa fa-rocket"></i></a>
 							<h3>Quickstart</h3>
 							<p>Up and working within 15 minutes.</p>
+						</div>
+						<div class="feature">
+							<a href="manual/pride-3-user-manual.html"><i class="fa fa-book"></i></a>
+							<h3>User Manual</h3>
+							<a href="manual/pride-3-user-manual.html">Multi-page HTML</a><br>
+							<a href="manual.html">HTML document</a><br>
+							<a href="manual.pdf">PDF download</a>
 						</div>
 						<div class="feature">
 							<i class="fa fa-download"></i>
