--- a/manual/pride-3-user-manual.html
+++ b/manual/pride-3-user-manual.html
@@ -25,10 +25,16 @@
 <header id="title-block-header">
 <h1 class="title">PriDE 3 User Manual</h1>
 </header>
-<p><a href="what-is-pride.html">What is PriDE</a></p>
+<p><a href="about-pride.html">About PriDE</a></p>
 <p><a href="quick-start-tutorial.html">Quick Start Tutorial</a></p>
 <p><a href="entity-adapter-and-descriptor.html">Entity, Adapter, and Descriptor</a></p>
-<p><a href="find-and-query.html">Find and query</a></p>
+<p><a href="find-and-query.html">Find and Query</a></p>
+<p><a href="insert-update-and-delete.html">Insert, Update, and Delete</a></p>
+<div class="subpage-navigation">
+<p>
+<a id="next" href="about-pride.html">Next </a>
+</p>
+</div>
 				</div>
 			</section>
 
