--- a/manual/pride-3-user-manual.html
+++ b/manual/pride-3-user-manual.html
@@ -30,11 +30,7 @@
 <p><a href="entity-adapter-and-descriptor.html">Entity, Adapter, and Descriptor</a></p>
 <p><a href="find-and-query.html">Find and Query</a></p>
 <p><a href="insert-update-and-delete.html">Insert, Update, and Delete</a></p>
-<div class="subpage-navigation">
-<p>
-<a id="next" href="about-pride.html">Next </a>
-</p>
-</div>
+<p><a href="entity-inheritance.html">Entity Inheritance</a></p>
 				</div>
 			</section>
 
