--- a/manual/entity-inheritance.html
+++ b/manual/entity-inheritance.html
@@ -240,10 +240,10 @@ CUSTOMER(name) inherit.AbstractNamedHybrid -h inherit.AbstractHybrid
 				</div>
 			</section>
 
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/skel.min.js"></script>
+			<script src="../assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<script src="../assets/js/main.js"></script>
 </body>
 </html>
