--- a/manual/about-pride.html
+++ b/manual/about-pride.html
@@ -32,9 +32,9 @@
 </nav>
 <p>PriDE ist the Java world’s smallest object-relational mapper for SQL databases. O/R mapping is the wide-spread approach to map records of a relation SQL database to objects of an object-oriented application. The application should operate on its persistent entities as object-oriented as possible, not regarding that some of them come from a database or must be saved in one. PriDE provides functionality to</p>
 <ul>
-<li><p>Describe the mapping of database tables to Java classes</p></li>
-<li><p>Read and write data records without accessing the complicated JDBC interface, and - as far as possible - don’t write any SQL at all</p></li>
-<li><p>Simplify the assembly of complicated SQL expressions and selection conditions</p></li>
+<li>Describe the mapping of database tables to Java classes</li>
+<li>Read and write data records without accessing the complicated JDBC interface, and - as far as possible - don’t write any SQL at all</li>
+<li>Simplify the assembly of complicated SQL expressions and selection conditions</li>
 </ul>
 <p>While O/R mapping is usually based on single-object operations, PriDE also supports efficient database mass processing within Java. The goal is to avoid shifting application logic into procedures within the database as far as possible and not to break the DRY principle. However, if stored procedures and functions are required sometimes, PriDE provides a convenient way to call them.</p>
 <p>PriDE was designed for usage in JSE and JEE environments and is used identically everywhere except some initialization operations and the transaction management. The framework follows a very pragmatic approach to provide basic development support quickly and easily. It does not claim to conform with established persistence management standards but follows common design patterns and proved to be suitable in mission-critical projects over many years. The <a href="feature-list.html">detailed feature list</a> may help to figure out whether PriDE meets the requirements of individual development projects, and allows to roughly compare this toolkit with existing well-known O/R mapping products and standards like JPA, JOOQ or MyBatis.</p>
@@ -63,10 +63,10 @@
 				</div>
 			</section>
 
-			<script src="../assets/js/jquery.min.js"></script>
-			<script src="../assets/js/skel.min.js"></script>
-			<script src="../assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="../assets/js/main.js"></script>
+			<script src="https://j-pride.github.io/assets/js/jquery.min.js"></script>
+			<script src="https://j-pride.github.io/assets/js/skel.min.js"></script>
+			<script src="https://j-pride.github.io/assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="https://j-pride.github.io/assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="https://j-pride.github.io/assets/js/main.js"></script>
 </body>
 </html>
