--- a/manual.html
+++ b/manual.html
@@ -48,7 +48,7 @@
 </ul></li>
 <li><a href="#selection-criteria">Selection criteria</a><ul>
 <li><a href="#wherecondition">WhereCondition</a></li>
-<li><a href="#arbitrary-criteria">Arbitrary criteria</a></li>
+<li><a href="#arbitrary-criteria">Arbitrary Criteria</a></li>
 </ul></li>
 </ul></li>
 <li><a href="#insert-update-and-delete">Insert, Update, and Delete</a><ul>
@@ -60,6 +60,12 @@
 <li><a href="#entity-inheritance">Entity Inheritance</a><ul>
 <li><a href="#inheritance-with-separate-adapters">Inheritance with separate adapters</a></li>
 </ul></li>
+<li><a href="#sql-expression-builder">SQL Expression Builder</a><ul>
+<li><a href="#elaborated-sql-vs.-java">Elaborated SQL vs. Java</a></li>
+<li><a href="#elaborated-sql-with-sqlexpressionbuilder">Elaborated SQL with SQLExpressionBuilder</a></li>
+<li><a href="#building-and-formatting">Building and Formatting</a></li>
+</ul></li>
+<li><a href="#joins-1">Joins</a></li>
 </ul>
 </nav>
 <h1 id="about-pride">About PriDE</h1>
@@ -84,7 +90,6 @@
 <h4 id="jse-jee-and-resourceaccessor">JSE, JEE, and ResourceAccessor</h4>
 <h4 id="multiple-databases">Multiple Databases</h4>
 <h4 id="mass-operations">Mass Operations</h4>
-<h4 id="sql-expression-builder">SQL Expression Builder</h4>
 <h4 id="calling-stored-procedures">Calling Stored Procedures</h4>
 <h4 id="pride-design-principles">PriDE Design Principles</h4>
 <p>A good information source for features which are not yet covered by this manual are PriDE’s unit tests which you can find on <a href="https://github.com/j-pride/pride.pm/tree/master/src/test/java/basic">GitHub</a>. You may also consult the manual from PriDE version 2 which is available on <a href="http://pride.sourceforge.net/PriDE.html">SourceForge</a>.</p>
@@ -426,7 +431,7 @@ ResultIterator ri = new Customer().query(byFirstNameAndEmptyName);</code></pre>
 <pre><code>new WhereCondition().orderBy(COL_NAME).orderBy(COL_FIRST_NAME)</code></pre>
 <p>Especially when you select data <em>in order</em>, the ResultIterator provides the additional methods spoolToList() and spoolToArray() to read results in chunks. This will be explained in more details in chapter <a href="#mass-operations">Mass Operations</a>.</p>
 <p>And finally finally the methods bindvars…() in the WhereCondition class give you fine-grained control over which parts of the expression should use bind variables and which ones should be plain SQL. Bind variables or not becomes a relevant issue for databases on heavy duty and therefore are also discussed in the mass operation chapter.</p>
-<h3 id="arbitrary-criteria">Arbitrary criteria</h3>
+<h3 id="arbitrary-criteria">Arbitrary Criteria</h3>
 <p>When the going gets tough there is a method <code>query(String where)</code> available in all adapters and hybrid entities. The function gets passed a fully assembled where-clause without the leading where keyword. It takes any limitations away but also a lot of convenience and safety. Assembly of complicated SQL expressions may not only become an issue in where-clauses but in any multi-record operation likes joins, merge statements, or mass updates. PriDE can help you assembling these expressions with the class pm.pride.SQLExpressionBuilder resp. the function pride.pm.SQL.build(). It preserves the native readability of complicated SQL on the one hand and allows you to work with table name and column name constants on the other hand to preserve code dependency tracking. In the preceding chapters you learned already that the PriDE principles heavily emphasize this central aspect for robust application design. The expression builder is addressed in a <a href="#sql-expression-builder">separate chapter</a>. However, to give you a first impression, here is an example how to build the most complicated expression above - the Mickey Mouse case - using the expression builder:</p>
 <pre><code>String byMickeyMouse = SQL.build(
     &quot;@ID &lt; 1000 AND (&quot; +
@@ -642,13 +647,92 @@ CUSTOMER inherit.DerivedCustomerAdapter inherit.DerivedCustomerEntity inherit.Ab
 <pre><code>java util.EntityGeneratorWithExampleConfig
 CUSTOMER(name) inherit.AbstractNamedHybrid -h inherit.AbstractHybrid</code></pre>
 <p>What PriDE does not support are queries based on abstract base entities which automatically consider the tables of the derived non-abstract entities. You can find features like that in JPA, but they require a highly complicated, obscure SQL query assembly - in combination with the table-per-class strategy resulting in SQL union expressions. This is something, which doesn’t happen too often and should always remain in the developer’s responsibility to stay on control of your SQL.</p>
+<h1 id="sql-expression-builder">SQL Expression Builder</h1>
+<p>If you walked through the preceding chapters of this manual, you already came across some simple examples for building SQL expressions with PriDE’s expression builder. As this helpful little utility will be used more intensively in the following chapters, it is worth to understand its idea. It does not really depend on SQL but can be used for any string assembly where things become too confusing when making use of Java’s built-in capabilities like string concatenation, StringBuilder oder String.format(). Actually it is just a small extension of String.format().</p>
+<h2 id="elaborated-sql-vs.-java">Elaborated SQL vs. Java</h2>
+<p>Let’s take up the good old CUSTOMER table from the <a href="#quick-start-tutorial">Quick Start Tutorial</a> and let’s suppose you want to implement a batch application querying for suspicious new customer registrations, which the system will initially block from order placement until the customers have verified their identity (somehow). We are looking for customers in a certain ID range with</p>
+<ul>
+<li>Either name and first name consist only of a single letter or</li>
+<li>The summarized length of name and first name id less than 7 letters or</li>
+<li>Name and first name are identical</li>
+</ul>
+<p>SQL is a very powerful and highly expressive and compact language for things like that. The appropriate where-clause would look like that, where only the boundaries of the ID range differ from one call to the next:</p>
+<pre><code>id between &lt;lowest&gt; and &lt;highest&gt; and (
+    ( length(name) + length(first_name) &lt; 7) or
+    ( length(name) &lt; 2 and length(first_name) &lt; 2 ) or
+    ( name = first_name )
+)</code></pre>
+<p>No matter which assembly API your Java persistence manager provides - JPA’s criteria API, PriDE’s WhereCondition, or JOOQ’s DSL API - it will cost a lot more Java code than SQL code to assemble the expression, and it will become hard to tell from the Java code what the resulting SQL may look like. So the recommendation is: for the sake of SQL maintainability, integrate the SQL code in your Java code <em>as is</em>. Of course, Java won’t accept SQL syntax, so “integration as is” means integration as a String after having verified syntactical correctness in a suitable SQL tool. Unfortunately this would raise another maintenance problem: the String literal is a big, big <a href="https://en.wikipedia.org/wiki/Magic_number_(programming)">magic number</a> composite and conflicts with the DRY principle. Although it contains various column name references you won’t be able to safely detect that the query might be affected e.g. when the NAME column requires a size change. You hopefully don’t try a full text search for the term “name” ;-)</p>
+<p>As a first step towards a solution, PriDE’s entity generator generates constants for table and column names, and it is strongly recommended to use these columns for SQL expression assembly. However concatenating String fragments and constants won’t result in better readability:</p>
+<pre><code>COL_ID + &quot; between &quot; + lowest + &quot; and &quot; + highest + &quot; and ( &quot; +
+&quot;( length( + COL_NAME + &quot;) + length( &quot; + COL_FIRST_NAME + &quot;) &lt; 7) or&quot; +
+...</code></pre>
+<p>String.format() is designed to keep the structure of the result string recognizable, but in this case it won’t help too much:</p>
+<pre><code>String.format(
+&quot;%s between %d and %d and (&quot; +
+&quot;    ( length(%s) + length(%s) &lt; 7) or&quot; +
+&quot;    ( length(%4$s) &lt; 2 and length(%5$s) &lt; 2 ) or&quot; +
+&quot;    ( %4$s = %5$s )&quot; +
+&quot;)&quot;,
+COL_ID, lowest, highest, COL_NAME, COL_FIRSTNAME);</code></pre>
+<h2 id="elaborated-sql-with-sqlexpressionbuilder">Elaborated SQL with SQLExpressionBuilder</h2>
+<p>PriDE’s expression builder extends String.format() in a way, the you can use identifiers rather than just % and position numbers as variables. The builder is address by the static function <code>build(String formatString, Object... args)</code> in class pm.pride.SQL. Identifiers in the format string that require replacement by any of the following arguments begin with an @ character and end with the first character that is neither a letter nor an underscore. Based on that, the SQL can be represented almost natively:</p>
+<pre><code>String.format(
+&quot;@id between %d and %d and (&quot; +
+&quot;    ( length(@name) + length(@first_name) &lt; 7) or&quot; +
+&quot;    ( length(@name) &lt; 2 and length(@first_name) &lt; 2 ) or&quot; +
+&quot;    ( @name = @first_name )&quot; +
+&quot;)&quot;,
+COL_ID, lowest, highest, COL_NAME, COL_FIRSTNAME);</code></pre>
+<p>As you can see, the identifier feature can be combined with Java’s standard replacement feature. arguments are assigned to identifiers in order of occurrence in the format string. Repeated occurrences of an identifier are replaced by the argument which was assigned to the identifier on its first occurrence.</p>
+<p>If you need lots of arguments, it is helpful to split the argument list in multiple lines like the format string. Each argument line contains only the arguments which are (first) assigned to the identifiers of the corresponding line from the format string. Applied to the example above it looks like that:</p>
+<pre><code>String.format(
+&quot;@id between %d and %d and (&quot; +
+&quot;    ( length(@name) + length(@first_name) &lt; 7) or&quot; +
+&quot;    ( length(@name) &lt; 2 and length(@first_name) &lt; 2 ) or&quot; +
+&quot;    ( @name = @first_name )&quot; +
+&quot;)&quot;,
+COL_ID, lowest, highest,
+COL_NAME, COL_FIRSTNAME);</code></pre>
+<p>A small expression like above doesn’t need those tricks, but e.g. a complex SQL merge statement may require 20 arguments and more. Alternatively you may also combine identifiers with position numbers as known from String.format(), so that you can check the identifier/argument matching by counting:</p>
+<pre><code>String.format(
+&quot;@1$id between %2$d and %3$d and (&quot; +
+&quot;    ( length(@4$name) + length(@5$first_name) &lt; 7) or&quot; +
+&quot;    ( length(@name) &lt; 2 and length(@first_name) &lt; 2 ) or&quot; +
+&quot;    ( @name = @first_name )&quot; +
+&quot;)&quot;,
+COL_ID, lowest, highest,
+COL_NAME, COL_FIRSTNAME);</code></pre>
+<p>Only one occurrence of an identifier needs to be accompanied by a position specification, while all the others automatically inherit the argument assignment. You may add the position number to all occurrences but then they have to be identical. Re-positioning is not allowed.</p>
+<h2 id="building-and-formatting">Building and Formatting</h2>
+<p>All identifiers are replaced by the string representation of its assigned argument. The expression builder is <em>not</em> concerned with SQL value formatting. If you do not only pass column, table, and alias names as arguments but also <em>values</em>, you must ensure proper SQL formatting. There are different approaches to achieve that.</p>
+<ul>
+<li>Add formatting characters to the SQL string. This works well for simple data types like string and integer values, but you must be aware of the <a href="https://www.w3schools.com/sql/sql_injection.asp">SQL injection risk</a> if the values come from an untrustworthy source like a consumer website.</li>
+<li>Format the value before passing it to the argument list. The value formatter for the current database is available through <code>DatabaseFactory.getDatabase().formatValue(Object value)</code>. The result is a fully formatted SQL value string. E.g. passing a string HELLO results in an SQL formatted String ‘HELLO’.</li>
+<li>Just place a ? character in the SQL string and pass the value argument to the function that consumes the SQL rather than the builder. You can see an example at the end of chapter <a href="#find-and-query">Find and Query</a> in section <a href="#arbitrary-criteria">Arbitrary Criteria</a>.</li>
+</ul>
+<h1 id="joins-1">Joins</h1>
+<p>PriDE provides different techniques to express joins, depending on the purpose resp. the type of outcome of the join:</p>
+<ul>
+<li>An entity being a 1:1 mapping of a table because the join is only required for complicated selection conditions that take related tables into account.</li>
+<li>An extended entity consisting of a 1:1 mapping of a table, extended by a few attributes from a related table</li>
+<li>An entity composition, i.e. an entity for a 1:1 mapping of a table, extended by references to related entities that also represent 1:1 table mappings</li>
+<li>A composition from table fragments and/or computations, making up a new type of entity with its own specific meaning.</li>
+</ul>
+<p>The different variants are explained with the CUSTOMER table being used in all other examples so far, and an additional table ADDRESS like this:</p>
+<pre><code>create table ADDRESS (
+    customer_id integer not null,
+    street varchar(30),
+    city varchar(30)
+);</code></pre>
+<p>Each customer optionally has an address attached. You find a corresponding entity and a table creation class in the directory examples/joins.</p>
 				</div>
 			</section>
 
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<script src="https://j-pride.github.io/assets/js/jquery.min.js"></script>
+			<script src="https://j-pride.github.io/assets/js/skel.min.js"></script>
+			<script src="https://j-pride.github.io/assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="https://j-pride.github.io/assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="https://j-pride.github.io/assets/js/main.js"></script>
 </body>
 </html>
