--- a/manual/entity-inheritance.html
+++ b/manual/entity-inheritance.html
@@ -140,7 +140,7 @@ CUSTOMER(name) inherit.AbstractNamedHybrid -h inherit.AbstractHybrid</code></pre
 <p>What PriDE does not support are queries based on abstract base entities which automatically consider the tables of the derived non-abstract entities. You can find features like that in JPA, but they require a highly complicated, obscure SQL query assembly - in combination with the table-per-class strategy resulting in SQL union expressions. This is something, which doesn’t happen too often and should always remain in the developer’s responsibility to stay on control of your SQL.</p>
 <div class="subpage-navigation">
 <p>
-<a id="prev" href="insert-update-and-delete.html"> Prev.</a> | <a id="next" href="joins.html">Next </a>
+<a id="prev" href="insert-update-and-delete.html"> Prev.</a> | <a id="next" href="sql-expression-builder.html">Next </a>
 </p>
 </div>
 				</div>
