--- a/manual/joins.html
+++ b/manual/joins.html
@@ -41,7 +41,7 @@
 Each customer optionally has an address attached. You find a corresponding entity and a table creation class in the directory examples/joins.
 <div class="subpage-navigation">
 <p>
-<a id="prev" href="entity-inheritance.html"> Prev.</a>
+<a id="prev" href="sql-expression-builder.html"> Prev.</a>
 </p>
 </div>
 				</div>
