--- a/manual/about-pride.html
+++ b/manual/about-pride.html
@@ -30,7 +30,7 @@
 <li><a href="#about-this-manual">About this manual</a></li>
 </ul>
 </nav>
-<p>PriDE ist the Java world’s smallest object-relational mapper for SQL databases. O/R mapping is the wide-spread approach to map records of a relation SQL database to objects of an object-oriented application. The application should operate on its persistent entities as object-oriented as possible, not regarding that some of them come from a database or must be saved in one. PriDE provides functionality to</p>
+<p>PriDE is the Java world’s smallest object-relational mapper for SQL databases. O/R mapping is the wide-spread approach to map records of a relation SQL database to objects of an object-oriented application. The application should operate on its persistent entities as object-oriented as possible, not regarding that some of them come from a database or must be saved in one. PriDE provides functionality to</p>
 <ul>
 <li>Describe the mapping of database tables to Java classes</li>
 <li>Read and write data records without accessing the complicated JDBC interface, and - as far as possible - don’t write any SQL at all</li>
