--- a/manual/pride-3-user-manual.html
+++ b/manual/pride-3-user-manual.html
@@ -25,7 +25,7 @@
 <header id="title-block-header">
 <h1 class="title">PriDE 3 User Manual</h1>
 </header>
-<p><a href="about-pride.html">About PriDE</a><p> <a href="quick-start-tutorial.html">Quick Start Tutorial</a><p> <a href="entity-adapter-and-descriptor.html">Entity, Adapter, and Descriptor</a><p> <a href="find-and-query.html">Find and Query</a><p> <a href="insert-update-and-delete.html">Insert, Update, and Delete</a><p> <a href="entity-inheritance.html">Entity Inheritance</a><p> <a href="sql-expression-builder.html">SQL Expression Builder</a><p> <a href="joins.html">Joins</a></p>
+<p><a href="about-pride.html">About PriDE</a> <a href="quick-start-tutorial.html">Quick Start Tutorial</a> <a href="entity-adapter-and-descriptor.html">Entity, Adapter, and Descriptor</a> <a href="find-and-query.html">Find and Query</a> <a href="insert-update-and-delete.html">Insert, Update, and Delete</a> <a href="entity-inheritance.html">Entity Inheritance</a> <a href="sql-expression-builder.html">SQL Expression Builder</a> <a href="joins.html">Joins</a></p>
 				</div>
 			</section>
 
